--- a/.github/workflows/keploy.yaml
+++ b/.github/workflows/keploy.yaml
@@ -12,34 +12,27 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
       # Docker を使うので必須
       - name: Set up Docker
         uses: docker/setup-buildx-action@v3
-
       # docker compose v2 を明示（ubuntu-latest では大体入ってるが保険）
       - name: Install docker-compose
         run: |
           docker compose version
-
       # Go の依存整理（任意だが安全）
       - name: Go mod tidy
         run: make tidy
-
-      # MySQL 起動
-      - name: Start MySQL
-        run: make run-mysql
-
-      # App image build
-      - name: Build App Image
-        run: make build-app
-
       # Keploy Test 実行
       # ⚠️ Keploy の exit code バグ対策で || true を付ける
       - name: Run Keploy Tests
         run: |
           make ci-keploy || true
-
+      - name: Test-Report
+        uses: keploy/testgpt@main
+        with:
+          working-directory: ./
+          delay: 10
+          command: "make run"
       # 後片付け
       - name: Cleanup
         if: always()
