--- a/.github/workflows/keploy.yaml
+++ b/.github/workflows/keploy.yaml
@@ -22,13 +22,17 @@ jobs:
       # Go の依存整理（任意だが安全）
       - name: Go mod tidy
         run: make tidy
+      - name: Build image
+        run: docker compose build pointservice
+      - name: Start MySQL
+        run: docker compose -f docker-compose.mysql.yml up -d
       # Keploy Test 実行
       - name: Test-Report
         uses: keploy/testgpt@main
         with:
           working-directory: ./
           delay: 10
-          command: "docker compose build && docker run --name point-app --network pointservice_keploy-network -e POINT_MYSQL_HOST=mysql -e POINT_MYSQL_DATABASE=appdb -e POINT_MYSQL_PORT=3306 -e POINT_MYSQL_USER=appuser -e POINT_MYSQL_PASSWORD=apppass -e POINT_MYSQL_MAX_OPEN_CONNECTIONS=2 -e POINT_MYSQL_MAX_IDLE_CONNECTIONS=1 point-service:1.0"
+          command: "docker run --name point-app --network pointservice_keploy-network -e POINT_MYSQL_HOST=mysql -e POINT_MYSQL_DATABASE=appdb -e POINT_MYSQL_PORT=3306 -e POINT_MYSQL_USER=appuser -e POINT_MYSQL_PASSWORD=apppass -e POINT_MYSQL_MAX_OPEN_CONNECTIONS=2 -e POINT_MYSQL_MAX_IDLE_CONNECTIONS=1 point-service:1.0"
       # 後片付け
       - name: Cleanup
         if: always()
