--- a/.github/workflows/keploy.yaml
+++ b/.github/workflows/keploy.yaml
@@ -31,8 +31,8 @@ jobs:
         uses: keploy/testgpt@main
         with:
           working-directory: ./
-          delay: 10
-          build-delay: '50s'
+          delay: 8
+          buildDelay: '50s'
           command: "docker run --name point-app --network pointservice_keploy-network -e POINT_MYSQL_HOST=mysql -e POINT_MYSQL_DATABASE=appdb -e POINT_MYSQL_PORT=3306 -e POINT_MYSQL_USER=appuser -e POINT_MYSQL_PASSWORD=apppass -e POINT_MYSQL_MAX_OPEN_CONNECTIONS=2 -e POINT_MYSQL_MAX_IDLE_CONNECTIONS=1 point-service:1.0"
       # 後片付け
       - name: Cleanup
