--- a/.github/workflows/keploy.yaml
+++ b/.github/workflows/keploy.yaml
@@ -27,13 +27,20 @@ jobs:
       - name: Start MySQL
         run: docker compose -f docker-compose.mysql.yml up -d
       # Keploy Test 実行
-      - name: Test-Report
-        uses: keploy/testgpt@main
-        with:
-          working-directory: ./
-          delay: 8
-          buildDelay: '50s'
-          command: "docker run --name point-app --network pointservice_keploy-network -e POINT_MYSQL_HOST=mysql -e POINT_MYSQL_DATABASE=appdb -e POINT_MYSQL_PORT=3306 -e POINT_MYSQL_USER=appuser -e POINT_MYSQL_PASSWORD=apppass -e POINT_MYSQL_MAX_OPEN_CONNECTIONS=2 -e POINT_MYSQL_MAX_IDLE_CONNECTIONS=1 point-service:1.0"
+      - name: Keploy Test
+        run: |
+          sudo -E keploy test \
+            -c "docker run --rm \
+                --network pointservice_keploy-network \
+                -e POINT_MYSQL_HOST=mysql \
+                -e POINT_MYSQL_DATABASE=appdb \
+                -e POINT_MYSQL_PORT=3306 \
+                -e POINT_MYSQL_USER=appuser \
+                -e POINT_MYSQL_PASSWORD=apppass \
+                point-service:1.0" \
+            --delay 8s \
+            --buildDelay 50s \
+            --path .
       # 後片付け
       - name: Cleanup
         if: always()
