--- a/.github/workflows/keploy.yaml
+++ b/.github/workflows/keploy.yaml
@@ -30,8 +30,12 @@ jobs:
         run: |
           curl --silent --location \
             https://github.com/keploy/keploy/releases/latest/download/keploy_linux_amd64.tar.gz \
-            | tar xz -C $HOME/.local/bin
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
+            | tar xz -C /tmp
+          
+          sudo mv /tmp/keploy /usr/local/bin/keploy
+          sudo chmod +x /usr/local/bin/keploy
+          
+          keploy version
       - name: Keploy Test
         run: |
           sudo -E keploy test \
