--- a/.github/workflows/keploy.yaml
+++ b/.github/workflows/keploy.yaml
@@ -47,6 +47,8 @@ jobs:
                 -e POINT_MYSQL_PORT=3306 \
                 -e POINT_MYSQL_USER=appuser \
                 -e POINT_MYSQL_PASSWORD=apppass \
+                -e POINT_MYSQL_MAX_OPEN_CONNECTIONS=2 \
+                -e POINT_MYSQL_MAX_IDLE_CONNECTIONS=1 \
                 point-service:1.0" \
             --delay 8 \
             --buildDelay 50 \
