--- a/keploy/test-set-0/tests/test-1.yaml
+++ b/keploy/test-set-0/tests/test-1.yaml
@@ -8,46 +8,46 @@ spec:
     method: GET
     proto_major: 1
     proto_minor: 1
-    url: http://localhost:1323/point/confirm
+    url: http://127.0.0.1:1323/point/confirm
     header:
       Accept: application/json, text/plain, */*
       Accept-Encoding: gzip, compress, deflate, br
       Connection: keep-alive
       Content-Length: "28"
       Content-Type: application/json
-      Host: localhost:1323
-      Request-Start-Time: "1767019494516"
+      Host: 127.0.0.1:1323
+      Request-Start-Time: "1767022579463"
       User-Agent: bruno-runtime/2.15.1
     body: |-
       {
         "user_id":"testuser01"
       }
-    timestamp: 2025-12-29T14:44:54.520693482Z
+    timestamp: 2025-12-29T15:36:19.468654257Z
   resp:
     status_code: 400
     header:
       Content-Length: "30"
       Content-Type: application/json
-      Date: Mon, 29 Dec 2025 14:44:54 GMT
+      Date: Mon, 29 Dec 2025 15:36:19 GMT
     body: |
       {"errors":["user not found"]}
     status_message: Bad Request
     proto_major: 0
     proto_minor: 0
-    timestamp: 2025-12-29T14:44:56.621853303Z
+    timestamp: 2025-12-29T15:36:21.49370855Z
   objects: []
   assertions:
     noise:
       header.Date: []
-  created: 1767019496
+  created: 1767022581
 curl: |-
   curl --request GET \
-    --url http://localhost:1323/point/confirm \
-    --header 'Host: localhost:1323' \
+    --url http://127.0.0.1:1323/point/confirm \
+    --header 'Host: 127.0.0.1:1323' \
     --header 'Connection: keep-alive' \
     --header 'Accept: application/json, text/plain, */*' \
     --header 'Content-Type: application/json' \
     --header 'User-Agent: bruno-runtime/2.15.1' \
-    --header 'Request-Start-Time: 1767019494516' \
+    --header 'Request-Start-Time: 1767022579463' \
     --header 'Accept-Encoding: gzip, compress, deflate, br' \
     --data "{\n  \"user_id\":\"testuser01\"\n}"
