--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,7 @@ services:
       POINT_MYSQL_MAX_OPEN_CONNECTIONS: "2"
       POINT_MYSQL_MAX_IDLE_CONNECTIONS: "1"
     ports:
-      - "8080:1323"
+      - "1323:1323"
     networks:
       - pointservice-network
 
@@ -44,7 +44,17 @@ services:
       retries: 10
     networks:
       - pointservice-network
-
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"   # AMQP
+      - "15672:15672" # Management UI
+    environment:
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASS: guest
+    networks:
+      - pointservice-network
 volumes:
   mysql-data:
 
