--- a/docker-compose.middleware.yml
+++ b/docker-compose.middleware.yml
@@ -23,7 +23,17 @@ services:
       retries: 10
     networks:
       - keploy-network
-
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"   # AMQP
+      - "15672:15672" # Management UI
+    environment:
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASS: guest
+    networks:
+      - keploy-network
 volumes:
   mysql-data:
 
