--- a/docker-compose.middleware.yml
+++ b/docker-compose.middleware.yml
@@ -32,6 +32,11 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: guest
       RABBITMQ_DEFAULT_PASS: guest
+    healthcheck:
+      test: ["CMD", "rabbitmq-diagnostics", "ping"]
+      interval: 5s
+      timeout: 5s
+      retries: 3
     networks:
       - keploy-network
 volumes:
