--- a/.github/workflows/keploy.yaml
+++ b/.github/workflows/keploy.yaml
@@ -49,8 +49,9 @@ jobs:
                 -e POINT_MYSQL_PASSWORD=apppass \
                 -e POINT_MYSQL_MAX_OPEN_CONNECTIONS=2 \
                 -e POINT_MYSQL_MAX_IDLE_CONNECTIONS=1 \
+                -e ENVIRONMENT=keploy \
                 point-service:1.0" \
-            --delay 30 \
+            --delay 15 \
             --buildDelay 50 \
             --path .
       # 後片付け
