--- a/.pr_agent.toml
+++ b/.pr_agent.toml
@@ -1,21 +1,20 @@
 [pr_reviewer]
-enable = true
-require_tests = false
-require_description = true
-approve_if_no_comments = true
-review_focus = [
-  "bug risks",
-  "readability",
-  "architecture",
-  "async safety",
-  "error handling"
+enable_review_labels_effort = true
+enable_auto_approval = true
+
+[github_app]
+pr_commands = [
+    "/describe --pr_description.publish_description_as_comment=true",
+    "/improve",
+    "/agentic_review"
 ]
 
-[pr_description]
-generate = true
+handle_push_trigger = true
+push_commands = [
+    "/improve",
+    "/agentic_review"
+]
 
-[pr_code_suggestions]
-enable = true
-
-[pr_auto_approve]
-enable = true
+[review_agent]
+enabled = true
+publish_output = true
