--- a/keploy/test-set-2/tests/test-2.yaml
+++ b/keploy/test-set-2/tests/test-2.yaml
@@ -40,6 +40,7 @@ spec:
   objects: []
   assertions:
     noise:
+      body.reservation_id: []
       body.execute_at: []
       header.Date: []
   created: 1769934420
